papers and other events

--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@ I am a full-time <a href="https://www.polyu.edu.hk/eee/people/academic-staff-and
 		</div>
 		<div class="misc" id="Jobs">
 			<h1 class="hot">Research assistant, PhD, and postdoctoral opportunities at PolyU</h1><br />
-			<p class="highlighted">I'm currently looking for exceptional students interested in applying for the <b>Hong Kong PhD Fellowship Scheme</b> under my supervision. The deadline for applications is the 1st of December 2024, <a href="mailto:luca_rossi_at_polyu_edu_hk">get in touch</a> asap so that I can help you to shape a strong research proposal for your application. More info can be found at <a href="https://www.polyu.edu.hk/gs/prospective-students/hkpfs/">HKPFS@PolyU</a>. Students interested in PolyU's <a href="https://www.polyu.edu.hk/en/gs/prospective-students/dual-phd-degree-programmes/">Dual PhD Programmes</a>, visiting researchers, and research assistant are also welcome to <a href="mailto:luca_rossi_at_polyu_edu_hk">contact me</a>.</p>
+			<p class="highlighted">I'm currently looking for exceptional students interested in applying for the <b>Hong Kong PhD Fellowship Scheme</b> under my supervision. <a href="mailto:luca_rossi_at_polyu_edu_hk">Get in touch</a> to discuss potential research proposals for your application. More info can be found at <a href="https://www.polyu.edu.hk/gs/prospective-students/hkpfs/">HKPFS@PolyU</a>. Students interested in PolyU's <a href="https://www.polyu.edu.hk/en/gs/prospective-students/dual-phd-degree-programmes/">Dual PhD Programmes</a>, visiting researchers, and research assistant are also welcome to <a href="mailto:luca_rossi_at_polyu_edu_hk">contact me</a>.</p>
 		</div>
 		<div class="misc" id="News">
 			<h1>News &amp; Upcoming Events</h1>
 			<ul>
-				<li>I will be chairing <a href="https://sites.google.com/view/s-sspr-2024">S+SSPR 2024</a> in Venice (Italy) on 9-10 September 2024.</li>
-				<li><a href="#">GraFix: A Graph Transformer with Fixed Attention based on the WL Kernel</a> has been accepted to <a href="https://icpr2024.org/">ICPR 2024</a>.</li>
-				<li><a href="https://ieeexplore.ieee.org/document/10542111">Graph Kernel Neural Networks</a> has been accepted for publication on the joiurnal <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5962385">IEEE Transactions on Neural Networks and Learning Systems</a>.</li>
-				<li><a href="https://arxiv.org/pdf/2303.03761.pdf">Graph neural networks in vision-language image understanding: a survey</a> has been accepted for publication on the journal <a href="https://link.springer.com/journal/371">The Visual Computer</a>.</li>
+				<li>Two papers accepted at ICLR 2025 (collaboration with Ca' Foscari University of Venice) and CVPR 2025 (collaboration with Queen Mary University of London).</li>
+				<li>I will be be co-chairing <a href="https://ssspr2026.inf.unibe.ch/">S+SSPR 2026</a> in Bern (Switzerland) on 24-26 August 2026.</li>
+				<li>We are currently organising the 2nd edition of the <a href="https://sites.google.com/view/tc2-dlg-2">IAPR Summer School on Deep Learning on Graphs</a> in Bertinoro (Italy) on 7-9 July 2025.</li>
+				<li>Since January 2025, I am the new chair of the <a href="https://sites.google.com/view/iapr-tc2/">TC2</a>. Follow us on <a href="https://x.com/iaprtc2">Twitter</a> for news about events organised by the TC2.</li>
 			</ul>
 			<a href="#">Back to Top</a>
 		</div>
@@ -102,6 +102,8 @@ I am a full-time <a href="https://www.polyu.edu.hk/eee/people/academic-staff-and
 		<div class="box" id="Conferences">
 			<h1>Conferences</h1>
 			<ul>
+				<li class="paper">A. Gallagher-Syed, H. Senior, O. Alwazzan, E. Pontarini, M. Bombardieri, C. Pitzalis, M. J. Lewis, M. R Barnes, <b>Luca Rossi</b> and G. Slabaugh, <a href="#">BioX-CPath: Biologically-driven Explainable Diagnostics for Multistain IHC Computational Pathology</a>, CVPR, 2025.</li>
+				<li class="paper">G. Minello, A. Bicciato, <b>L. Rossi</b>, A. Torsello and L. Cosmo, <a href="https://arxiv.org/html/2402.18974v1">Graph Generation via Spectral Diffusion</a>, ICLR, 2025.</li>
 				<li class="paper">G. Minello, L. Zhang, A. Bicciato, <b>L. Rossi</b>, Andrea Torsello, and Luca Cosmo, <a class="paper-title" href="#">LESI-GNN: an Interpretable Graph Neural Network based on Local Structures Embedding</a>, <a href="https://sspr2024.dais.unive.it/">S+SSPR</a>, 2024.</li>	
 				<li class="paper">L. Zhang, L. Cosmo, G. Minello, A. Torsello, and <b>L. Rossi</b>, <a class="paper-title" href="#">GraFix: A Graph Transformer with Fixed Attention based on the WL Kernel</a>, <a href="https://icpr2024.org/">ICPR</a>, 2024.</li>
 				
@@ -185,7 +187,6 @@ I am a full-time <a href="https://www.polyu.edu.hk/eee/people/academic-staff-and
 			</ul>
 			<h1>Preprints</h1>
 			<ul>
-				<li class="paper">G. Minello, A. Bicciato, <b>L. Rossi</b>, A. Torsello and L. Cosmo, <a href="https://arxiv.org/html/2402.18974v1">Graph Generation via Spectral Diffusion</a>, arXiv:2402.18974, 2024.</li>
 				<li class="paper">A. Torsello and <b<L. Rossi</b>, <a href="https://arxiv.org/abs/1601.04691">Efficient Computation of Decoherent Quantum Walks through Eigenvalue Perturbation</a>, arXiv:1601.04691, 2016.</li>
 				<li class="paper">A. Lima, V. Pejovic, <b>L. Rossi</b>, M. Musolesi and M. Gonzalez, <a class="paper-title" href="http://arxiv.org/pdf/1504.01316.pdf">Progmosis: Evaluating Risky Individual Behavior During Epidemics Using Mobile Network Data</a>, Submission to D4D Senegal (<a href="http://www.netmob.org/">NetMob 2015</a>).</li>
 			</ul>
